--- a/BookingFood/BookingFood/Views/Home/SpecialCell/SpecialCell.xib
+++ b/BookingFood/BookingFood/Views/Home/SpecialCell/SpecialCell.xib
@@ -20,7 +20,7 @@
                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="VP4-Of-itk" customClass="CardView" customModule="BookingFood" customModuleProvider="target">
                         <rect key="frame" x="0.0" y="0.0" width="300" height="96"/>
                         <subviews>
-                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="GVX-aN-gVQ">
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="Image" translatesAutoresizingMaskIntoConstraints="NO" id="GVX-aN-gVQ">
                                 <rect key="frame" x="16" y="16" width="64" height="64"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="64" id="84E-ic-L93"/>
@@ -28,7 +28,7 @@
                                 </constraints>
                                 <userDefinedRuntimeAttributes>
                                     <userDefinedRuntimeAttribute type="number" keyPath="cornerRadius">
-                                        <real key="value" value="5"/>
+                                        <real key="value" value="10"/>
                                     </userDefinedRuntimeAttribute>
                                 </userDefinedRuntimeAttributes>
                             </imageView>
@@ -99,6 +99,7 @@
         </collectionViewCell>
     </objects>
     <resources>
+        <image name="Image" width="256" height="256"/>
         <systemColor name="systemBackgroundColor">
             <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
         </systemColor>
